[package]
name = "hw0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
getopts = "0.2"
regex = "1.9.5"
rust-stemmers = "1.2.0"
stop-words = {version = "0.7.2", default-features = false, features = ["nltk"]}
plotly = "0.8.4"
